dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
    traefik.frontend.rule: PathPrefixStrip
  creationTimestamp: "2019-09-04T11:03:13Z"
  generation: 1
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: karis.bxsoft.com
    http:
      paths:
      - backend:
          serviceName: dashboard-service
          servicePort: https
        path: /ui
  tls:
  - hosts:
    - karis.bxsoft.com
    secretName: traefik/traefik-ui-tls-cert
status:
  loadBalancer:
    ingress:
    - hostname: karis.bxsoft.com
